Added an img src, an ul element, some h2 elements, a p element with strong attribute, and some a elements to the touchdownpizza.html page. I also linked to the original recipe page in the index.html page.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="https://www.allrecipes.com/recipe/230760/touchdown-pizza/">Touchdown Pizza</a>
 </body>
 </html>
