I just did the same exact thing for the other two recipe pages, nothing new or changed since that

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="https://www.allrecipes.com/recipe/230760/touchdown-pizza/">Touchdown Pizza</a>
+    <ul>
+        <a href="recipes/touchdown_pizza.html">Touchdown Pizza</a>
+        <a href="recipes/asparagusandeggs.html">Asparagus and Eggs</a>
+        <a href="recipes/croquemadame.html">Croque Madame</a>
+    </ul>
 </body>
 </html>
