--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <a href="recipes/touchdown_pizza.html">Touchdown Pizza</a>
-        <a href="recipes/asparagusandeggs.html">Asparagus and Eggs</a>
-        <a href="recipes/croquemadame.html">Croque Madame</a>
-    </ul>
+    <header>
+        <h1 id="main-title">Odin Recipes</h1>
+    </header>
+    
+    <main>
+        <ul class="recipe-list">
+            <li><a class="recipe-link" href="recipes/touchdown_pizza.html">Touchdown Pizza</a></li>
+            <li><a class="recipe-link" href="recipes/asparagusandeggs.html">Asparagus and Eggs</a></li>
+            <li><a class="recipe-link" href="recipes/croquemadame.html">Croque Madame</a></li>
+        </ul>
+    </main>
 </body>
 </html>
